[project]
name = "rukcn"
version = "0.1.0"
description = "rukcn"
readme = "README.md"
requires-python = "==3.13.2"
package-mode = false

dependencies = [
    "aiohttp[speedups]==3.12.0",

    "dacite==1.9.2",
    "loguru==0.7.3",
    "orjson==3.10.18",
    "result==0.17.0",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest-cov==6.1.1",
    "ruff==0.11.11",
    "ty==0.0.1a6",
    "vulture==2.14",
]

[tool.mypy]
exclude = "tests"

[tool.vulture]
exclude = [".venv", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["N815", "E501", "COM812"]
lint.fixable = ["ALL"]
lint.mccabe.max-complexity = 10
lint.pydocstyle.convention = "google"
